<resources>
    <string name="google_client_id">332211262049-t34jk3di3plslksj6vm27l6lb6pi0k98.apps.googleusercontent.com</string>
    <string name="api_key">CgB6e3x9CJLwZFmYaBB4a5BnglIhGyV/XDb0mIuMuVC8PcmLJp1BlHwnbBeNr5Rz4LoFmXUJA0LkGu07uPe4c8Lx</string>
    <string name="app_name">Museum Application</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_with_email">Sign in with Email</string>
    <string name="register_with_email">Register with Email</string>
    <string name="facebook_login_Description">Facebook Login</string>
    <string name="gmail_login_Description">Gmail Login</string>
    <string name="huaweiid_login_Description">HuaweiID Login</string>
    <string name="or_login">Login / Register With Email</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="request_verification_code">Request Verification Code</string>
    <string name="resend_verification_code">Resend Verification Code</string>
    <string name="repeat_pass">Repeat Password:</string>
    <string name="verification_code">Verification Code:</string>
    <string name="wait_xx_seconds_to_resend_the_verification_code">Wait XX seconds to resend the Verification Code</string>
    <string name="name">Name</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="map">Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="notification_channel_id">MuseumPush</string>
    <string name="menu_map">Nearby Museums</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_home">Explore Inside</string>

    <string name="facebook_app_id">788902605252338</string>
    <string name="fb_login_protocol_scheme">fb788902605252338</string>
    <string name="application_logo">Application Logo</string>
    <string name="Explore">Explore</string>
    <string name="notification_title">Explore Nearby Museums</string>
    <string name="search_for_museums">Search for Museums</string>
    <string name="artifact_name">Exhibit Name:</string>
    <string name="no_nearby_artifact">No nearby Exhibit</string>
    <string name="focus_on_map">Focus on Map</string>
    <string name="museum_login">Museum Login</string>
    <string name="title_activity_museum_panel">MuseumPanelActivity</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="Personal">Personal</string>
    <string name="favorite">Favorite</string>
    <string name="navigate">Navigate</string>
    <string name="favorites">Favorites</string>
    <string name="image">Image</string>
    <string name="artifactname">ArtifactName</string>
    <string name="museum_information">Museum Information</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number:</string>
    <string name="phone">Phone</string>
    <string name="web_page">Web Page</string>
    <string name="closing_hour">Closing Hour</string>
    <string name="opening_hour">Opening Hour</string>
    <string name="ticket_price">Ticket Price</string>
    <string name="total_visits">Total Visits</string>
    <string name="_1_week_graph_of_visits">Last Week Graph of Visits</string>
    <string name="average_visit_length_for_per_exhibit">Average visit length for per Exhibit</string>
    <string name="_1_week_graph_of_average_visit_length">Last week graph of Average Visit Length</string>
    <string name="total_favorites">Total Favorites</string>
    <string name="total_exhibits">Total Exhibits</string>
    <string name="visits">Visits</string>
    <string name="_0">0</string>
    <string name="statistics">Statistics</string>
    <string name="total_visits_bottom">Total Visits:</string>
    <string name="last_week_visits">Last Week Visits:</string>
    <string name="favorite_count">Favorite Count:</string>
    <string name="average_visit_length">Average Visit Length:</string>
    <string name="visit_count_graph_of_last_week">Visit Count Graph of Last Week</string>
    <string name="average_visit_length_of_last_week">Average Visit Length of Last Week</string>
    <string name="permissionsAlert">App requires these permissions to run. Application will stop.</string>
    <string name="exit">Exit</string>
    <string name="please_scan_museum_warning">Please scan for Museums first</string>
    <string name="darkModePreferences">darkMode</string>
    <string name="mapDarkPreferences">mapDarkMode</string>
    <string name="network_error">NETWORK ERROR. Please activate internet connection for this feature.</string>
    <string name="bluetooth_error">BLUETOOTH ERROR. Please activate bluetooth for this feature.</string>
    <string name="gps_error">GPS ERROR. Please activate GPS for this feature.</string>
    <string name="thread_sleep_error">Thread sleep error</string>
    <string name="verification_already_requested">You have already requested verification code for this email recently .</string>
    <string name="fill_verification_email_warning">Fill this field to get verification code!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue_with_google_text">Continue with Google</string>
    <string name="continue_with_huawei_text">Continue with Huawei</string>
    <string name="continue_with_facebook_text">Continue with Facebook</string>
    <string name="museum_staff_login">Museum Staff Login</string>
    <string name="or_are_you_a_museum_staff">Or Are you a Museum Staff?</string>
    <string name="could_not_connect">Could not connect to internet services. Check your network</string>
    <string name="retry_string">RETRY</string>
    <string name="email_permissions_warning">Please give email permissions for the application, otherwise you can\'t register to the app.</string>
    <string name="networkWarnString">Network Warn</string>
    <string name="searchResult">%1$s museums found in %2$s kilometers</string>
    <string name="gps_not_enabled">GPS is not enabled. Please activate your GPS.</string>
    <string name="login_error">Login Error</string>
    <string name="insert_user_fail">Insert user info failed</string>
    <string name="most_visited">Most Visited</string>
    <string name="longest_stay">Longest Stay</string>
    <string name="least_visited">Least Visited</string>
    <string name="shortest_stay">Shortest Stay</string>
    <string name="museum_distance">Museum Distance</string>
    <string name="museum_address">Museum Address</string>
    <string name="museum_phone">Museum Phone</string>
    <string name="museum_page">Museum Page</string>
    <string name="total_visit_length">Total Visit Length:</string>
    <string name="last_week_average_length">Last Week Average Length:</string>
    <string name="museum_name">Museum Name</string>
    <string name="description">Description</string>
    <string name="distance">Distance</string>
    <string name="_50m">50m</string>
    <string name="explore_nearby_museums">Explore Nearby Museums</string>
    <string name="museum_description">Museum Description</string>

</resources>
