<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_explore"
        android:name="com.example.museumapplication.ui.home.beacon.VirtualGuideFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_virtual_guide" >
        <action
            android:id="@+id/action_nav_explore_to_nav_map"
            app:destination="@id/nav_map" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.museumapplication.ui.home.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@xml/root_preferences" >
        <action
            android:id="@+id/action_nav_settings_to_nav_map"
            app:destination="@id/nav_map" />
    </fragment>

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.museumapplication.ui.home.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />
    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.museumapplication.ui.home.favorite.MainFavoriteFragment"
        android:label="@string/favorites"
        tools:layout="@layout/favorite_main_fragment" >
        <action
            android:id="@+id/action_nav_favorites_to_nav_map"
            app:destination="@id/nav_map" />
    </fragment>

</navigation>