<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="100dp">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:layout_width="0dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/timerText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/wait_xx_seconds_to_resend_the_verification_code"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:layout_marginEnd="10dp"
                android:visibility="gone"/>

            <Button
                android:id="@+id/requestCodeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:onClick="requestVerificationButtonClicked"
                android:text="@string/request_verification_code"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:autofillHints="Name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword"
                android:layout_width="0dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/repeat_pass" />

            <EditText
                android:id="@+id/repeatPassEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/verification_code" />

            <EditText
                android:id="@+id/verificationCodeEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:maxLength="6"
                android:textAlignment="center"/>

        </LinearLayout>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_with_email"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:layout_marginStart="75dp"
            android:layout_marginEnd="75dp"
            android:layout_marginTop="30dp"
            android:onClick="registerButtonClicked"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>