<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bottom_sheet_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/bottom_sheet_container"
    android:backgroundTint="#424242">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/colorPrimary"
        android:background="@drawable/bottom_sheet_background"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:translationZ="1dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:id="@+id/favorite_button">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/star"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:id="@+id/starImage" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/favorite"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.439"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="10dp"
        android:background="@color/hwid_auth_button_color_black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/museum2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <TextView
                android:id="@+id/bottom_sheet_museum_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/museum_name"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="@color/colorWhite"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/bottom_sheet_museum_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/museum_distance"
                android:textColor="@color/colorWhite"
                android:textSize="17sp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/bottom_sheet_museum_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/museum_address"
                android:textColor="@color/colorWhite"
                android:textSize="17sp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/bottom_sheet_museum_telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/museum_phone"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/bottom_sheet_web_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/museum_page"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:layout_marginBottom="5dp"
                />

        </LinearLayout>

    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/navigate"
        android:textColor="@color/colorWhite"
        android:layout_margin="10dp"
        android:translationZ="1dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:id="@+id/navigateButton"/>


</LinearLayout>